# ml_mentoring_xgboost

./: README.md  main.py  pyproject.toml
notebooks/: data_gathering.ipynb  eda.ipynb  heart_disease_pipeline.pkl  xgboost_model_build.ipynb
notebooks/data/: cleaned_data.csv
