[project]
name = "ml-mentoring-model-calibration-problem"
version = "0.1.0"
description = "Machine Learning and Data Science Project for Mentoring Students on XGBoost"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "imblearn>=0.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "requests>=2.33.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "xgboost>=3.2.0",
]
